# trade_approval_case_study

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/trade_approval_case_study/: main.py
tests/: test_health.py
